# gravity

./: .gitignore  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  Dockerfile  README.md  Renderer.cpp  Renderer.h  Simulator.cpp  Simulator.h  main.cpp  vcpkg.json
.github/: workflows
.github/workflows/: build.yml
